--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,12 +1,31 @@
 version: '3.3'
 services:
 
+  db:
+    image: postgres:13.10
+    volumes:
+      - pg_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+  
+  backend:
+      image: seiju23/foodgram_backend
+      restart: always
+      volumes:
+        - static_volume:/app/static/
+        - media_volume:/app/media/
+      depends_on:
+        - db
+      env_file:
+        - ./.env
+
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: seiju23/foodgram_frontend
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -15,3 +34,13 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_volume:/var/html/static/
+      - media_volume:/var/html/media/
+    depends_on:
+      - frontend
+    restart: always
+
+volumes:
+  pg_data:
+  static_volume:
+  media_volume:
