--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,8 +56,8 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             sudo docker pull seiju23/foodgram_backend:latest
-            sudo `which docker-compose` stop
-            sudo `which docker-compose` rm -f backend
+            sudo docker compose stop
+            sudo docker compose rm -f backend
             rm .env
             touch .env
             echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
@@ -67,7 +67,7 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo `which docker-compose` up -d --build
+            sudo docker compose up -d --build
 
   send_message:
     runs-on: ubuntu-latest
