--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
+            cd foodgram
             sudo docker pull seiju23/foodgram_backend:latest
             sudo docker compose stop
             sudo docker compose rm -f backend
