--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,4 +78,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой успешно выполнен! Пуш сделал ${{ github.actor }} с пометкой ${{ github.event.commits[0].message }}.
+        message: Деплой успешно выполнен! Пуш сделал ${{ github.actor }} с пометкой ${{ github.event.commits[0].message }}...
