--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,30 +2,33 @@ server {
     listen 80;
     server_tokens off;
     server_name 158.160.69.24;
+    client_max_body_size 10M;
 
     location /api/docs/ {
         root /usr/share/nginx/html;
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/redoc.html;
     }
 
     location /static/admin/ {
-        alias /static/admin/;
+        alias /var/html/static/admin/;
     }
 
     location /media/ {
-        alias /media/;
+        root /var/html/;
     }
 
     location /api/ {
         proxy_set_header    Host $http_host;
         proxy_set_header    X-Forwarded-Host $http_host;
         proxy_set_header    X-Forwarded-Server $http_host;
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/api/;
     }
 
     location /admin/ {
         proxy_set_header Host $http_host;
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/admin/;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
     }
 
     location /static/rest_framework/ {
@@ -44,7 +47,6 @@ server {
 
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root   /var/html/frontend;
     }
 }
-
