Update nginx.conf add domain name

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_tokens off;
-    server_name 158.160.69.24;
+    server_name seiju23foodgram.sytes.net;
     client_max_body_size 10M;
 
     location /api/docs/ {
