--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./.env
   
   backend:
-      image: seiju23/foodgram_backend
+      image: seiju23/foodgram_backend:latest
       restart: always
       volumes:
         - static_volume:/app/static/
@@ -20,7 +20,7 @@ services:
         - ./.env
 
   frontend:
-    image: seiju23/foodgram_frontend
+    image: seiju23/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
