--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         - name: Push to Docker Hub
           uses: docker/build-push-action@v2 
           with:
-            context: backend
+            context: ./backend/
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
