--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,17 +56,11 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             cd foodgram-project-react/infra
-            sudo docker compose stop
-            sudo docker compose rm -f backend
-            rm .env
-            touch .env
-            echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            sudo docker compose pull
+            sudo docker compose down
+            sudo docker compose docker-compose.yml exec backend python manage.py migrate
+            sudo docker compose docker-compose.yml exec backend python manage.py collectstatic
+            sudo docker compose docker-compose.yml exec backend cp -r /app/collected_static/. /app/static/static/
             sudo docker compose up -d --build
 
   send_message:
