--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,28 +1,34 @@
 version: '3.3'
-services:
 
+volumes:
+  pg_data:
+  static:
+  media:
+
+
+services:
   db:
     image: postgres:13.10
     volumes:
       - pg_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env
+      - .env
   
   backend:
       image: seiju23/foodgram_backend:latest
-      restart: always
       volumes:
-        - static_volume:/app/static/
-        - media_volume:/app/media/
+        - static:/backend_static
+        - media:/backend_media
+        - ./data/:/backend_data
       depends_on:
         - db
       env_file:
-        - ./.env
+        - .env
 
   frontend:
     image: seiju23/foodgram_frontend:latest
     volumes:
-      - ../frontend/:/app/result_build/
+      - static:/app/result_build
     depends_on:
       - backend
 
@@ -32,15 +38,8 @@ services:
       - 8888:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_volume:/var/html/static/
-      - media_volume:/var/html/media/
+      - ./docs/:/static/api/docs
+      - static:/static
+      - media:/media
     depends_on:
-      - frontend
-    restart: always
-
-volumes:
-  pg_data:
-  static_volume:
-  media_volume:
+      - backend
