--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -17,9 +17,8 @@ services:
   backend:
       image: seiju23/foodgram_backend:latest
       volumes:
-        - static:/backend_static
-        - media:/backend_media
-        - ./data/:/backend_data
+        - static:/app/static/
+        - media:/app/media/
       depends_on:
         - db
       env_file:
@@ -28,7 +27,7 @@ services:
   frontend:
     image: seiju23/foodgram_frontend:latest
     volumes:
-      - static:/app/result_build
+      - ../frontend/:/app/result_build
     depends_on:
       - backend
 
@@ -38,8 +37,9 @@ services:
       - 8888:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./docs/:/static/api/docs
-      - static:/static
-      - media:/media
+      - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
+      - static:/var/html/static/
+      - media:/var/html/media
     depends_on:
       - backend
