--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,40 +1,51 @@
 server {
     listen 80;
     server_tokens off;
+    client_max_body_size 10M;
 
     location /api/docs/ {
-        root /static;
+        root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
 
+    location /static/admin/ {
+        alias /var/html/static/admin/;
+    }
+
     location /media/ {
-        alias /media/;
+        root /var/html/;
     }
 
     location /api/ {
         proxy_set_header    Host $http_host;
-        proxy_pass http://backend:8000;
-	client_max_body_size 20M;
+        proxy_set_header    X-Forwarded-Host $http_host;
+        proxy_set_header    X-Forwarded-Server $http_host;
+        proxy_pass http://backend:8000/api/;
     }
 
-    location ~ ^/admin(/|$) {
+    location /admin/ {
         proxy_set_header Host $http_host;
-        proxy_pass http://backend:8000;
-        client_max_body_size 20M;
+        proxy_pass http://backend:8000/admin/;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+    }
+
+    location /static/rest_framework/ {
+        alias /static/rest_framework/;
     }
 
     location / {
-        root /static;
+        root /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header        Host $http_host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
     }
 
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /var/html/frontend/;
+        root   /var/html/frontend;
     }
 }
