--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,33 +1,28 @@
 version: '3.3'
-
-volumes:
-  pg_data:
-  static:
-  media:
-
-
 services:
+
   db:
     image: postgres:13.10
     volumes:
       - pg_data:/var/lib/postgresql/data/
     env_file:
-      - .env
+      - ./.env
   
   backend:
       image: seiju23/foodgram_backend:latest
+      restart: always
       volumes:
-        - static:/app/static/
-        - media:/app/media/
+        - static_volume:/app/static/
+        - media_volume:/app/media/
       depends_on:
         - db
       env_file:
-        - .env
+        - ./.env
 
   frontend:
     image: seiju23/foodgram_frontend:latest
     volumes:
-      - ../frontend/:/app/result_build
+      - ../frontend/:/app/result_build/
     depends_on:
       - backend
 
@@ -39,7 +34,14 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static:/var/html/static/
-      - media:/var/html/media
+      - static_volume:/var/html/static/
+      - media_volume:/var/html/media/
     depends_on:
-      - backend
+      - frontend
+    restart: always
+
+volumes:
+  pg_data:
+  static_volume:
+  media_volume:
+
