--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,16 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - name: Check out the repo
-          uses: actions/checkout@v2 
+          uses: actions/checkout@v4
         - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v1 
+          uses: docker/setup-buildx-action@v2
         - name: Login to Docker
-          uses: docker/login-action@v1 
+          uses: docker/login-action@v2
           with:
-            username: ${{ secrets.DOCKER_USERNAME }} 
+            username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
         - name: Push to Docker Hub
-          uses: docker/build-push-action@v2 
+          uses: docker/build-push-action@v4
           with:
             context: ./backend/
             push: true
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker
@@ -45,7 +45,9 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
+    needs: 
+      - build_and_push_to_docker_hub
+      - build_frontend_and_push_to_docker_hub
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -56,18 +58,13 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             cd foodgram-project-react/infra
-            sudo docker compose stop
-            sudo docker compose rm -f backend
-            rm .env
-            touch .env
-            echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo docker compose up -d --build
+            sudo docker compose pull
+            sudo docker compose down
+            sudo docker compose up -d
+            sudo docker compose exec backend python manage.py migrate
+            sudo docker compose exec backend python manage.py collectstatic
+            sudo docker compose exec backend cp -r /app/collected_static/. /backend_static/static/
+            sudo docker system prune -af
 
   send_message:
     runs-on: ubuntu-latest
@@ -78,4 +75,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой успешно выполнен! Пуш сделал ${{ github.actor }} с пометкой ${{ github.event.commits[0].message }}...
+        message: Деплой успешно выполнен! Пуш сделал ${{ github.actor }} с пометкой ${{ github.event.commits[0].message }}.
