--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       image: seiju23/foodgram_backend:latest
       restart: always
       volumes:
-        - static_volume:/app/static/
-        - media_volume:/app/media/
+        - backend_static:/app/static
+        - backend_media:/app/media
       depends_on:
         - db
       env_file:
@@ -34,8 +34,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_volume:/var/html/static/
-      - media_volume:/var/html/media/
+      - backend_static:/backend_static
+      - backend_media:/backend_media
     depends_on:
       - frontend
     restart: always
