--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       image: seiju23/foodgram_backend:latest
       restart: always
       volumes:
-        - backend_static:/app/static
-        - backend_media:/app/media
+        - static:/app/static/
+        - media:/app/media/
       depends_on:
         - db
       env_file:
@@ -34,13 +34,13 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - backend_static:/backend_static
-      - backend_media:/backend_media
+      - static:/var/html/static/
+      - media:/var/html/media/
     depends_on:
       - frontend
     restart: always
 
 volumes:
   pg_data:
-  static_volume:
-  media_volume:
+  static:
+  media:
