--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -12,20 +12,24 @@ server {
     }
 
     location /api/ {
-        proxy_set_header    Host $http_host;
+        proxy_set_header	Host $http_host;
 	proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_pass http://backend:8000/api/;
     }
-    location /backend_static/ {
-        alias /backend_static/;
+    
+    location /static/admin/ {
+        root /var/html/;
     }
 
-    location /backend_media/ {
-        alias /backend_media/;
-    }	
+
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
+
+
     location /admin/ {
-        proxy_set_header Host $http_host;
+        proxy_set_header	Host $http_host;
 	proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_pass http://backend:8000/admin/;
