--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -19,12 +19,12 @@ server {
     }
     
     location /static/admin/ {
-        root /var/html/;
+        root /var/html/static/;
     }
 
 
     location /static/rest_framework/ {
-        root /var/html/;
+        root /var/html/static/;
     }
 
 
