trying to fix static

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,7 +8,7 @@ server {
     }
 
     location /media/ {
-        root /var/html/;
+        root /var/html/media;
     }
 
     location /api/ {
@@ -19,12 +19,12 @@ server {
     }
     
     location /static/admin/ {
-        root /var/html/static/;
+        root /var/html/static;
     }
 
 
     location /static/rest_framework/ {
-        root /var/html/static/;
+        root /var/html/static;
     }
 
 
