deploy with static

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -7,10 +7,6 @@ server {
         try_files $uri $uri/redoc.html;
     }
 
-    location /media/ {
-        root /var/html/media;
-    }
-
     location /api/ {
         proxy_set_header	Host $http_host;
 	proxy_set_header        X-Real-IP $remote_addr;
@@ -18,15 +14,13 @@ server {
         proxy_pass http://backend:8000/api/;
     }
     
-    location /static/admin/ {
-        root /var/html/static;
+    location /backend_static/ {
+        alias /backend_static/;
     }
 
-
-    location /static/rest_framework/ {
-        root /var/html/static;
+    location /backend_media/ {
+        alias /backend_media/;
     }
-
 
     location /admin/ {
         proxy_set_header	Host $http_host;
