--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,13 +7,13 @@ services:
       - pg_data:/var/lib/postgresql/data/
     env_file:
       - .env
-  
+
   backend:
       image: seiju23/foodgram_backend:latest
       restart: always
       volumes:
-        - static:/app/static/
-        - media:/app/media/
+        - backend_static:/app/static
+        - backend_media:/app/media
       depends_on:
         - db
       env_file:
@@ -22,7 +22,7 @@ services:
   frontend:
     image: seiju23/foodgram_frontend:latest
     volumes:
-      - ../frontend/:/app/result_build/
+      - static:/app/result_build/
     depends_on:
       - backend
 
@@ -32,10 +32,10 @@ services:
       - 8888:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
+      - static:/usr/share/nginx/html/
+      - backend_static:/backend_static
+      - backend_media:/backend_media
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static:/var/html/static/
-      - media:/var/html/media/
     depends_on:
       - frontend
     restart: always
@@ -43,4 +43,5 @@ services:
 volumes:
   pg_data:
   static:
+  backend_static:
   media:
