--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -14,13 +14,12 @@ server {
         proxy_pass http://backend:8000/api/;
     }
     
-    location /backend_static/ {
-        alias /backend_static/;
+    location /static/admin/ {
+        root /var/html/;
     }
 
-    location /backend_media/ {
-        alias /backend_media/;
-    }
+    location /static/rest_framework/ {
+        root /var/html/;
 
     location /admin/ {
         proxy_set_header	Host $http_host;
