--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -22,7 +22,7 @@ services:
   frontend:
     image: seiju23/foodgram_frontend:latest
     volumes:
-      - static:/app/result_build/
+      - ../frontend/:/app/result_build/
     depends_on:
       - backend
 
@@ -33,12 +33,11 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
       - static:/var/html/static/
       - media:/var/html/media/
-      - ../docs/:/usr/share/nginx/html/api/docs/
     depends_on:
-      - frontend
-    restart: always
+      - backend
 
 volumes:
   pg_data:
