--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -18,8 +18,12 @@ server {
         root /var/html/;
     }
 
-    location /static/rest_framework/ {
-        root /var/html/;
+    location /backend_static/ {
+	alias /backend_static/;
+    }
+
+    location /backend_media/ {
+	alias /backend_media/;
     }
 
     location /admin/ {
