--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,6 +7,11 @@ services:
       - pg_data:/var/lib/postgresql/data/
     env_file:
       - .env
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]
+      interval: 3s
+      timeout: 3s
+      retries: 5
 
   backend:
       image: seiju23/foodgram_backend:latest
@@ -15,7 +20,8 @@ services:
         - backend_static:/app/static
         - backend_media:/app/media
       depends_on:
-        - db
+        db:
+          condition: service_healthy
       env_file:
         - .env
 
